@@ -1,4 +1,3 @@
 *.rpm
-pcp.spec.head
 pcp.spec
 rpmmacros
