@@ -353,12 +353,180 @@ exit 0
 chown -R pcpqa:pcpqa /var/lib/pcp/testsuite 2>/dev/null
 
 %pre
-# The new place ... this should match the setting in /etc/pcp.conf
-# _after_ the installation
-#
+getent group pcp >/dev/null || groupadd -r pcp
+getent passwd pcp >/dev/null || \
+    useradd -c "Performance Co-Pilot" -g pcp -d /var/lib/pcp -M -r -s /sbin/nologin pcp
+# new directories; they should match /etc/pcp.conf settings after install
 PCP_SYSCONF_DIR=@pcp_sysconf_dir@
-# and same here ...
-#
 PCP_LOG_DIR=@pcp_log_dir@
-[ -d "$PCP_LOG_DIR" ] || mkdir "$PCP_LOG_DIR"
+# produce a script to run post-install to move configs to their new homes
+save_configs_script()
+{
+    _new="$1"
+    shift
+    for _dir
+    do
+        [ "$_dir" = "$_new" ] && continue
+        if [ -d "$_dir" ]
+        then
+            ( cd "$_dir" ; find . -type f -print ) | sed -e 's/^\.\///' \
+            | while read _file
+            do
+                _want=true
+                if [ -f "$_new/$_file" ]
+                then
+                    # file exists in both directories, pick the more
+                    # recently modified one
+                    _try=`find "$_dir/$_file" -newer "$_new/$_file" -print`
+                    [ -n "$_try" ] || _want=false
+                fi
+                $_want && echo cp -p "$_dir/$_file" "$_new/$_file"
+            done
+        fi
+    done
+}
+# migrate and clean configs
+rm -f "$PCP_LOG_DIR/configs.sh"
+for daemon in pmcd pmie pmlogger pmproxy
+do
+    save_configs_script >> "$PCP_LOG_DIR/configs.sh" $PCP_SYSCONF_DIR/$daemon \
+        /var/lib/pcp/config/$daemon /etc/$daemon /etc/pcp/$daemon /etc/sysconfig/$daemon
+done
+exit 0
 
+%preun
+if [ "$1" -eq 0 ]
+then
+    # stop daemons before erasing the package
+    /sbin/service pmlogger stop >/dev/null 2>&1
+    /sbin/service pmie stop >/dev/null 2>&1
+    /sbin/service pmproxy stop >/dev/null 2>&1
+    /sbin/service pmcd stop >/dev/null 2>&1
+    /sbin/chkconfig --del pcp >/dev/null 2>&1
+    /sbin/chkconfig --del pmcd >/dev/null 2>&1
+    /sbin/chkconfig --del pmlogger >/dev/null 2>&1
+    /sbin/chkconfig --del pmie >/dev/null 2>&1
+    /sbin/chkconfig --del pmproxy >/dev/null 2>&1
+fi
+
+%post
+# restore saved configs, if any
+PCP_LOG_DIR=@pcp_log_dir@
+test -s "$PCP_LOG_DIR/configs.sh" && source "$PCP_LOG_DIR/configs.sh"
+rm -f $PCP_LOG_DIR/configs.sh
+chown -R pcp:pcp /var/log/pcp/{pmcd,pmlogger,pmie,pmproxy} 2>/dev/null
+/sbin/chkconfig --add pmcd >/dev/null 2>&1
+/sbin/service pmcd condrestart
+/sbin/chkconfig --add pmlogger >/dev/null 2>&1
+/sbin/service pmlogger condrestart
+/sbin/chkconfig --add pmie >/dev/null 2>&1
+/sbin/service pmie condrestart
+/sbin/chkconfig --add pmproxy >/dev/null 2>&1
+/sbin/service pmproxy condrestart
+
+%post libs -p /sbin/ldconfig
+%postun libs -p /sbin/ldconfig
+
+%files -f base_files.rpm
+%defattr(-,root,root)
+
+%files libs -f libs_files.rpm
+%defattr(-,root,root)
+
+%files libs-devel -f devel_files.rpm
+%defattr(-,root,root)
+
+%files testsuite -f testsuite_files.rpm
+%defattr(-,pcpqa,pcpqa)
+
+%files import-sar2pcp -f import_sar2pcp_files.rpm
+%defattr(-,root,root)
+
+%files import-iostat2pcp -f import_iostat2pcp_files.rpm
+%defattr(-,root,root)
+
+%files import-sheet2pcp -f import_sheet2pcp_files.rpm
+%defattr(-,root,root)
+
+%files import-mrtg2pcp -f import_mrtg2pcp_files.rpm
+%defattr(-,root,root)
+
+%files -n perl-PCP-PMDA -f perl-pcp-pmda.list
+%defattr(-,root,root)
+
+%files -n perl-PCP-MMV -f perl-pcp-mmv.list
+%defattr(-,root,root)
+
+%files -n perl-PCP-LogImport -f perl-pcp-logimport.list
+%defattr(-,root,root)
+
+%files -n perl-PCP-LogSummary -f perl-pcp-logsummary.list
+%defattr(-,root,root)
+
+%files -n python-pcp -f python-pcp.list.rpm
+%defattr(-,root,root)
+
+%changelog
+* Fri Nov 16 2012 Nathan Scott <nathans@redhat.com> - 3.6.10-1
+- Currently under development.
+
+* Fri Oct 12 2012 Nathan Scott <nathans@redhat.com> - 3.6.9-1
+- Update to latest PCP sources.
+
+* Tue Aug 28 2012 Mark Goodwin <mgoodwin@redhat.com> - 3.6.6-1
+- Update to latest PCP sources, see installed CHANGELOG for details.
+- Introduces new python-pcp and pcp-testsuite sub-packages.
+
+* Thu Aug 16 2012 Nathan Scott <nathans@redhat.com> - 3.6.5-1
+- Update to latest PCP sources, resolves several security issues.
+
+* Tue Jun 12 2012 Nathan Scott <nathans@aconex.com> - 3.6.4-1
+- Update to latest PCP sources, resolves Fedora s390x build issue.
+
+* Fri Apr 27 2012 Nathan Scott <nathans@aconex.com> - 3.6.3-1
+- Update to latest PCP sources.
+
+* Wed Mar 28 2012 Nathan Scott <nathans@aconex.com> - 3.6.0-1
+- Update to latest PCP sources.
+
+* Thu Dec  1 2011 Nathan Scott <nathans@aconex.com> - 3.5.11-1
+- Update to latest PCP sources.
+
+* Sun Oct 23 2011 Mark Goodwin <mgoodwin@redhat.com> - 3.5.9-1
+- Update to latest PCP sources.
+
+* Mon Aug  8 2011 Nathan Scott <nathans@aconex.com> - 3.5.8-1
+- Update to latest PCP sources.
+
+* Thu Jul 21 2011 Nathan Scott <nathans@aconex.com> - 3.5.6-1
+- Update to latest PCP sources.
+
+* Fri Jul  6 2011 Nathan Scott <nathans@aconex.com> - 3.5.5-1
+- Update to latest PCP sources.
+
+* Fri Jun  3 2011 Nathan Scott <nathans@aconex.com> - 3.5.2-1
+- Update to latest PCP sources.
+
+* Mon Aug 30 2010 Mark Goodwin <mgoodwin@redhat.com>
+- bump to 3.4.0-1, split out individual pcp-import-* packages
+
+* Mon Aug  2 2010 Mark Goodwin <mgoodwin@redhat.com>
+- bump to 3.4.0, add the perl-PCP-LogImport sub-package
+
+* Thu Feb 25 2010 Martin Hicks <mort@sgi.com>
+- Remove SGI cruft from specfile.
+
+* Tue Feb 23 2010 Nathan Scott <nathans@aconex.com> - 3.1.1-1
+- Update to latest PCP sources.
+
+* Mon Oct 19 2009 Martin Hicks <mort@sgi.com> - 3.0.1-2
+- Remove IB dependencies.  The Infiniband PMDA is being moved to
+  a stand-alone package.
+- Move cluster PMDA to a stand-alone package.
+
+* Mon Oct 5 2009 Mark Goodwin <mgoodwin@redhat.com> - 3.0.0-7
+- merged Kenj's tree with PMDA_INTERFACE_4 and dynamic PMNS
+- ReplacePmnsSubtree fix bad signal handling botch
+
+* Mon Sep 28 2009 Mark Goodwin <mgoodwin@redhat.com> - 3.0.0-6
+- bump to v3.0.0 and reconcile spec with Fedora spec
